--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,4 +4,15 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
+  // "compilerOptions": {
+  //   "baseUrl": "src",
+  //   "paths": {
+  //     "@app/*": ["app/*"],
+  //     "@pages/*": ["pages/*"],
+  //     "@shared/*": ["shared/*"],
+  //     "@widgets/*": ["widgets/*"],
+  //     "@entities/*": ["entities/*"],
+  //     "@features/*": ["features/*"]
+  //   }
+  // }
 }
