--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,18 +1,28 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
-  // "compilerOptions": {
-  //   "baseUrl": "src",
-  //   "paths": {
-  //     "@app/*": ["app/*"],
-  //     "@pages/*": ["pages/*"],
-  //     "@shared/*": ["shared/*"],
-  //     "@widgets/*": ["widgets/*"],
-  //     "@entities/*": ["entities/*"],
-  //     "@features/*": ["features/*"]
-  //   }
-  // }
+  "compilerOptions": {
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "target": "ES2022",
+    "useDefineForClassFields": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "types": ["vite/client"],
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "verbatimModuleSyntax": true,
+    "moduleDetection": "force",
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "erasableSyntaxOnly": false, // изменил для enum
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
+  },
+  "include": ["src", "vite.config.ts"]
 }
