--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint:ts": "eslint src",
+    "lint:ts": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint:ts:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "lint:css": "stylelint \"src/**/*.scss\"",
     "lint:css:fix": "stylelint \"src/**/*.scss\" --fix",
+    "test": "jest --config config/jest/jest.config.cjs",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006 --config-dir ./config/.storybook",
+    "build-storybook": "storybook build --config-dir ./config/.storybook"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
@@ -27,6 +29,9 @@
     "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.39.1",
     "@storybook/addon-a11y": "^9.1.10",
@@ -38,6 +43,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.7.0",
     "@types/react": "^19.2.2",
@@ -45,6 +51,7 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "babel-jest": "^30.2.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -54,7 +61,9 @@
     "eslint-plugin-storybook": "^9.1.10",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jiti": "^2.6.1",
     "playwright": "^1.56.0",
     "postcss": "^8.5.6",
@@ -64,6 +73,7 @@
     "stylelint": "^16.25.0",
     "stylelint-config-standard-scss": "^16.0.0",
     "stylelint-scss": "^6.12.1",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "npm:rolldown-vite@7.1.14",
